20070315 version: loadso 0.1