@@ -1,0 +1,4 @@
+deinstall: deinstaller inst-check inst-copy inst-dir inst-link
+	./deinstaller
+deinstall-dryrun: deinstaller inst-check inst-copy inst-dir inst-link
+	./deinstaller dryrun
