@@ -1,0 +1,2 @@
+install-check: instchk inst-check
+	./instchk
