@@ -1,1 +1,1 @@
-/usr/local/include/coreland/corelib
+/usr/local/include/coreland/loadso
