@@ -1,1 +1,2 @@
 20070315 version: loadso 0.1
+20070315 code: fixed install
